# TESS

./: .gitignore  AGENT_RULES.md  README.md  TODO.md  animatest.py  client_secret.json.example  config.json  inspect_model_output.py  main.py  omnivoicetest.py  plan.md  pyproject.toml  run.bat  test.py  version.txt
.agent/rules/: windows-compat.md
apps/: utils.py
apps/cheatsheets/: app.py  markdown.md  nicegui.md  nicegui_styling.md  python_uv.md  sqlite.md  unix_commands.md
apps/custom_app_tutorial/: app.py  tutorial.md
apps/notes/: app.py
apps/routineer/: app.py  routineer.json
core/: create_image.py  generate_image.py  generate_inpaint.py  modify_image.py  point_to_segment.py  project_reader.py  session_state.py  upscale_image.py
data/: personas.json  ratings.json  tools.json
migrations/: 001_initial_settings.sql  002_visual_images.sql
pages/: apps.py  arena.py  audio.py  batch.py  chat.py  create.py  edit.py  google.py  models.py  notes.py  personas.py  playground.py  python_page.py  settings.py  tools.py  visual.py
scripts/: upgrade_visual_images_to_db.py
services/: arena_service.py  batch_service.py  chat_service.py  google_service.py  note_service.py  persona_service.py  rating_service.py  stream_service.py  system_message_service.py  system_service.py  tool_service.py  tts_service.py  visual_service.py
utils/: audio_player.py  base_llm_client.py  chat_renderer.py  config.py  encription.py  llm_client.py  memory_tool.py  ollama_client.py  settings_dialog.py  ui_card.py  ui_components.py  visual_tool.py  web_search_tool.py
(+26 files in other folders)
