[project]
name = "ollama-model-mgmt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "nicegui>=3.4.1",
    "ollama>=0.6.1",
    "google-api-python-client",
    "google-auth-oauthlib",
    "cryptography>=46.0.4",
    "kokoro>=0.9.4",
    "soundfile",
    "torch"
]
